fix(alert): Improve styling of alert-success when in dark mode

--- a/assets/scss/base/properties.scss
+++ b/assets/scss/base/properties.scss
@@ -175,7 +175,7 @@ html {
         --alert-secondary-bg: transparent;
 
         --alert-success: #ced4da;
-        --alert-success-bg: #fff;
+        --alert-success-bg: #394b42;
 
         --alert-warning: #ced4da;
         --alert-warning-bg: #997404;
